<resources>
    <string name="app_name">Rental Aid</string>

    <!-- Auth UI - Signed in -->
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>

    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>

    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="used_providers">Providers used: %s</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>

    <!-- Auth UI - Custom AuthMethodPickerLayout -->
    <string name="custom_layout_subheader">Sign in using this nice custom layout!</string>
    <string name="custom_layout_idp_header">Choose a provider</string>
    <string name="custom_layout_email_header">Use your email</string>
    <string name="custom_layout_email_click_text">Continue with Email</string>
    <string name="sign_in">Sign in</string>
    <string name="email_hints">Enter your email</string>
    <string name="pass_hint">Enter your password</string>
    <string name="sign_as_owner">Sign In As Owner</string>
    <string name="sign_in_as_tenent">Sign In As Tenent</string>
    <string name="rent">Rent : 1200/month</string>
    <string name="house_area">Area : Gulsan</string>
    <string name="deal_str">Deal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
